# ROS2_TCA9548A

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: all_params.yaml  ex_all_params.yaml  tca_params.yaml
include/tca9548a/: GenericI2CManager.hpp  I2CDevice.hpp  generic_i2c_manager.hpp  i2c_device.hpp  tca9548a.hpp  tca9548a_manager.hpp  tca9548a_node.hpp
launch/: ex_launch.py  manager_launch.py  tca_launch.py
msg/: SensorData.msg
src/: GenericI2CManager.cpp  d  generic_i2c_manager.cpp  tca9548a.cpp  tca9548a_manager.cpp  tca9548a_node.cpp  tca_manager_node.cpp
srv/: ConfigDevice.srv  InitDevice.srv  ReadDevice.srv  RegisterDevice.srv  SelectChannel.srv
